mejora visual menu principal

--- a/appVeterinaria/nbproject/project.properties
+++ b/appVeterinaria/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/appVeterinaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.flatlaf-3.0.jar=plugins\\flatlaf-3.0.jar
+file.reference.flatlaf-intellij-themes-3.0.jar=plugins\\flatlaf-intellij-themes-3.0.jar
+file.reference.mysql-connector-java-5.1.47.jar=plugins\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.flatlaf-3.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.flatlaf-intellij-themes-3.0.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
